# accelerate-rs

./: CHANGELOG.md  COVERAGE.md  COVERAGE_AUDIT.md  COVERAGE_AUDIT_V2.md  Cargo.toml  README.md  build.rs
examples/: 01_vdsp_fft.rs  02_blas_vimage.rs  03_vforce_transcendentals.rs  04_blas_linear_algebra.rs  05_lapack_decompositions.rs  06_bnns_activation.rs  07_sparse_linear_algebra.rs  08_vimage_processing.rs  09_simd_math.rs  10_quadrature_integration.rs
src/: blas.rs  bnns.rs  bridge.rs  error.rs  lapack.rs  lib.rs  quadrature.rs  simd.rs  sparse.rs  vdsp.rs  vforce.rs  vimage.rs
src/ffi/: blas.rs  bnns.rs  lapack.rs  mod.rs  quadrature.rs  simd.rs  sparse.rs  vdsp.rs  veclib_extras.rs  vforce.rs  vimage.rs
swift-bridge/: Package.swift
swift-bridge/Sources/AppleAccelerateBridge/: BLAS.swift  BNNS.swift  Core.swift  LAPACK.swift  Quadrature.swift  SIMD.swift  Sparse.swift  VDSP.swift  VForce.swift  VImage.swift
swift-bridge/Sources/AppleAccelerateBridge/include/: AppleAccelerateBridge.h
tests/: blas_tests.rs  bnns_tests.rs  lapack_tests.rs  quadrature_tests.rs  simd_tests.rs  sparse_tests.rs  vdsp_tests.rs  vforce_tests.rs  vimage_tests.rs
tools/raw-ffi-gen/: Cargo.toml
tools/raw-ffi-gen/src/: main.rs
