[package]
name = "apple-accelerate"
version = "0.3.2"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/doom-fish/accelerate-rs"
repository = "https://github.com/doom-fish/accelerate-rs"
description = "Safe Rust bindings for Apple's Accelerate framework on macOS with exhaustive optional raw C FFI"
authors = ["Per Johansson <per@doom.fish>"]
keywords = ["accelerate", "vdsp", "blas", "vimage", "apple"]
categories = ["api-bindings", "os::macos-apis", "science"]
rust-version = "1.76"
readme = "README.md"
include = [
    "build.rs",
    "swift-bridge/Package.swift",
    "swift-bridge/Sources/**/*",
    "src/**/*",
    "examples/**/*",
    "tests/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE-*",
    "CHANGELOG.md",
    "COVERAGE.md",
    "COVERAGE_AUDIT.md",
]

[lints.rust]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

[lib]
name = "apple_accelerate"
crate-type = ["lib"]

[features]
default = []
raw-ffi = []

[dependencies]
apple-cf = { version = ">=0.8, <0.10", default-features = false, features = ["cg"] }

[package.metadata.docs.rs]
default-target = "aarch64-apple-darwin"
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin"]
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

[[example]]
name = "01_vdsp_fft"

[[example]]
name = "02_blas_vimage"
